--- a/src/components/HomeBody.css
+++ b/src/components/HomeBody.css
@@ -1,9 +1,9 @@
 .profile-image {
     width: 300px;
-    height: 300px;
+    height: auto;
     object-fit: cover;
     border-radius: 50%;
-    margin: 5% 5%;
+    padding: 5% 5%;
 }
 
 #imagear {
