--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -1,9 +1,20 @@
 .profile-image {
-    width: 300px;
+    width: 100%;
     height: auto;
     object-fit: cover;
     border-radius: 50%;
-    padding: 5% 5%;
+    padding: 15% 15%;
+    align-items: center;
+}
+
+.card {
+    align-items: center;
+    height: 100vh;
+}
+
+p img {
+    height: 5em;
+    width: auto;
 }
 
 #imagear {
